sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/Special_Procurement_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Special Payment Request Line Item</label>
    <nameField>
        <displayFormat>SPR-LI-{0000000}</displayFormat>
        <label>Special Procurement Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Payment Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>