sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Balance_Carried_Forward__c.field-meta.xml
<CustomField>
    <fullName>Balance_Carried_Forward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Balance Carried Forward Line Item</description>
    <inlineHelpText>Balance Carried Forward Line Item</inlineHelpText>
    <label>Balance Carried Forward</label>
    <type>Checkbox</type>
</CustomField>