sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Create_PR_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Create_PR_Line_Item__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create PR Line Item?</label>
    <type>Checkbox</type>
</CustomField>