sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/EPR_Created__c.field-meta.xml
<CustomField>
    <fullName>EPR_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value is &#39;True&#39; if EPR has been created otherwise &#39;False&#39;</description>
    <inlineHelpText>Value is &#39;True&#39; if EPR has been created otherwise &#39;False&#39;</inlineHelpText>
    <label>EPR Created</label>
    <type>Checkbox</type>
</CustomField>