sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/EPR_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>EPR_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPR Line Item</description>
    <inlineHelpText>EPR Line Item</inlineHelpText>
    <label>EPR Line Item</label>
    <referenceTo>EPR_Payable_Item__c</referenceTo>
    <relationshipLabel>Special Payment Request Line Items</relationshipLabel>
    <relationshipName>Special_Payment_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>