sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Net_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Amount__c</fullName>
    <formula>Unit_Net_Price__c *  Quantity_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total quote amount less VAT</inlineHelpText>
    <label>Net Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>