sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Overide_PO_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Overide_PO_Item_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overide the PO Item Price</description>
    <inlineHelpText>Overide the PO Item Price</inlineHelpText>
    <label>Overide PO Item Price</label>
    <type>Checkbox</type>
</CustomField>