sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Purchase_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Item</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Special Payment Request Line Items</relationshipLabel>
    <relationshipName>Special_Payment_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>