sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Purchase_URL__c.field-meta.xml
<CustomField>
    <fullName>Purchase_URL__c</fullName>
    <inlineHelpText>Website to purchase from</inlineHelpText>
    <label>Purchase URL</label>
    <type>Url</type>
</CustomField>