sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Quantity_Requested__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Requested__c</fullName>
    <description>Quantity to be requested</description>
    <inlineHelpText>Quantity to be requested</inlineHelpText>
    <label>Quantity Requested</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>