sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Status__c</fullName>
    <defaultValue>&quot;Open&quot;</defaultValue>
    <description>Record Status for the SPR Line Item</description>
    <inlineHelpText>Record Status for the SPR Line Item</inlineHelpText>
    <label>Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>