sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Special_Procurement__c.field-meta.xml
<CustomField>
    <fullName>Special_Procurement__c</fullName>
    <description>Relationship between Special Procurement  &amp; Special Procurement Line Item</description>
    <label>Special Procurement</label>
    <referenceTo>Special_Procurement__c</referenceTo>
    <relationshipName>Special_Procurement_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>