sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <description>Changes to 0 if Status is &#39;Approved&#39; or &#39;Rejected&#39;, otherwise changes to 1</description>
    <inlineHelpText>Changes to 0 if Status is &#39;Approved&#39; or &#39;Rejected&#39;, otherwise changes to 1</inlineHelpText>
    <label>Status Flag</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>