sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Total Price which has been approved</description>
    <inlineHelpText>The Total Price which has been approved</inlineHelpText>
    <label>Total Approved Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>