sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Total_Unapproved_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Unapproved_Value__c</fullName>
    <formula>Net_Total_Amount__c  +  Total_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unapproved Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>