sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Total_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT__c</fullName>
    <formula>Unit_VAT_Amount__c *  Quantity_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A final price after deducting all discounts and rebates.</inlineHelpText>
    <label>Total VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>