sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Unit_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_VAT_Amount__c</fullName>
    <formula>IF(Vatable__c = true, 
IF(VAT_Inclusive__c = true, 
((VALUE(TEXT(VAT_Percentage__c))/100 ) * Unit_Price__c )/( (VALUE(TEXT(VAT_Percentage__c))+100)/100 ) , 
((VALUE(TEXT(VAT_Percentage__c))/100 ) * Unit_Price__c ) 
), 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>