sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/VAT_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>VAT_Inclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>price to which tax is yet to be added to arrive at the final cost.</inlineHelpText>
    <label>VAT Inclusive?</label>
    <type>Checkbox</type>
</CustomField>