sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/fields/Vatable__c.field-meta.xml
<CustomField>
    <fullName>Vatable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the item cost have VAT?</description>
    <inlineHelpText>Does the item cost have VAT?</inlineHelpText>
    <label>Vatable?</label>
    <type>Checkbox</type>
</CustomField>