sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/validationRules/Balance_Carried_Forward_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Balance_Carried_Forward_Change</fullName>
    <active>false</active>
    <errorConditionFormula>(ISCHANGED( Unit_Price__c )) &amp;&amp; 
(CASE($User.Id, 
&quot;005D0000005UNZo&quot;,1,
&quot;005D0000008RwqH&quot;,1,0) = 0)</errorConditionFormula>
    <errorDisplayField>Balance_Carried_Forward__c</errorDisplayField>
    <errorMessage>You cannot edit this record</errorMessage>
</ValidationRule>