sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Line_Item__c/validationRules/POIVendorSPRVendorMismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>POIVendorSPRVendorMismatch</fullName>
    <active>true</active>
    <description>Check if PO Item Vendor is the same as the SPR Vendor</description>
    <errorConditionFormula>AND(ISBLANK(Purchase_Order_Item__c )=FALSE,
 OR(Purchase_Order_Item__r.Vendor__c &lt;&gt;  Special_Procurement__r.Vendor__c ) , ( Purchase_Order_Item__r.Inventory_Item__r.Item_Company__c  &lt;&gt; Special_Procurement__r.Requesting_Company__c ))</errorConditionFormula>
    <errorMessage>Vendor on this SPR Line Item (or PO Item Vendor) does Not match Vendor on the SPR header</errorMessage>
</ValidationRule>